--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,13 @@
     text-align: center;
     font-family: Arial;
 }
+
+.horizontal {
+    margin: 0;
+    padding: 0;
+    background-color: #333;
+}
+
+li {
+    display: inline;
+}
