--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
-.main-nav a {
-    float: left;
-    display: block;
-    text-align: center;
-    padding: 14px 16px;
+body {
+    background-color: black;
+}
+
+.nav-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    background-color: gray;
+}
+
+.menu-flex {
+    flex-grow: 1;
+}
+
+.menu-flex a {
+    
     text-decoration: none;
     font-size: 17px;
 }
