--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,17 @@ body {
 }
 
 .apex-logo {
+    padding-block: 20px;
+}
+
+.apex-logo img{
+    width: 200px;
 }
 
 .main-nav-bar {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
+    justify-content: center;
 }
 
 .main-nav-bar a {
@@ -20,5 +26,6 @@ body {
     font-size: 20px;
     color: white;
     text-decoration: none;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
