--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@ body {
 .main-header {
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
 }
 
-.apex-logo {
-    padding-block: 20px;
+.apex-logo img{
+    margin-left: 30px;
 }
 
 .apex-logo img{
