--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
-ul {
-    list-style: none;
-    
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: gray;
 }
 
-.main-nav {
+.nav-links {
     display: flex;
-    flex-direction: row;
+    list-style: none;
+    font-size: 40px;
+}
+
+img {
+    height: 100px;
 }
