--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,8 @@ body {
 
 img {
     height: 80px;
-    padding-left: 40px;
+    margin-left: 40px;
+    border-radius: 20px;
 }
 
 .main-wrapper {
@@ -52,4 +53,10 @@ footer {
 
 .fa-brands {
     color: black;
+}
+
+.white-background {
+    border: 5px solid black;
+    border-radius: 20px;
+    margin: 10px;
 }
