--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: #262626;
     border-radius: 20px;
 }
 
@@ -34,11 +34,17 @@ img {
 }
 
 .left-flex {
+    background-color: #262626;
+    color: white;
     width: 50%;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 10px
 }
 
 .right-flex {
     width: 50%;
+    color: white;
 }
 
 .left-flex h1, 
@@ -52,11 +58,10 @@ footer {
 }
 
 .fa-brands {
-    color: black;
+    color: #262626;
 }
 
 .white-background {
-    border: 5px solid black;
     border-radius: 20px;
     margin: 10px;
 }
@@ -64,6 +69,8 @@ footer {
 .schedule {
     display: grid;
     grid-template-columns: auto auto auto auto auto auto auto;
+    background-color: #262626;
+    border-radius: 20px;
     padding: 15px;
 }
 
@@ -72,7 +79,7 @@ footer {
 }
 
 .schedule-content {
-    border: 2px solid;
+    border: 2px solid white;
 }
 
 .schedule-header,
