--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ body {
 .nav-links {
     display: flex;
     list-style: none;
-    font-size: 30px;
-    gap: 40px;
+    font-size: 1.8rem;
+    gap: 1.5rem;
     padding-right: 50px;
 }
 
@@ -33,6 +33,7 @@ img {
 .main-wrapper {
     display: flex;
     flex: 1fr 1fr;
+    flex-wrap: wrap;
 }
 
 .left-flex {
@@ -41,7 +42,7 @@ img {
     width: 50%;
     border-radius: 20px;
     margin: 10px;
-    padding: 10px
+    padding: 10px;
 }
 
 .right-flex {
