--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,73 @@
 body {
-    background-color: #21dde2;
-    font-family: 'Roboto', sans-serif;
-    color: white;
+  background-color: #21dde2;
+  font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #262626;
-    border-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #262626;
+  border-radius: 1rem;
 }
 
 .nav-links {
-    display: flex;
-    list-style: none;
-    font-size: 1.2rem;
-    gap: 1.5rem;
-    padding-right: 1.5rem;
+  display: flex;
+  list-style: none;
+  font-size: 1.2rem;
+  gap: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .nav-links a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 img {
-    height: 5rem;
-    padding-left: 1.5rem;
-    height: 50px;
+  height: 5rem;
+  padding-left: 1.5rem;
+  height: 50px;
 }
 
 .wrapper {
-    text-align: center;
+  text-align: center;
 }
 
 .left-wrapper {
-    background-color: #262626;
-    border-radius: 1rem;
-    margin-top: 1rem;
-    padding: 1rem;
-    line-height: 2rem;
+  background-color: #262626;
+  border-radius: 1rem;
+  margin-top: .3rem;
+  padding: .5rem;
+  line-height: 1.5rem;
+  font-size: 0.8rem;
 }
 
-.left-wrapper ul,
-.left-wrapper ol {
-    text-align: left;
+.left-wrapper h1,
+.left-wrapper h2 {
+  border-bottom: 1px white solid;
+}
+
+.left-wrapper ul {
+  text-align: left;
 }
 
 .right-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    font-size: .45rem;
-    background-color: #262626;
-    border-radius: 1rem;
-    margin-top: .5rem;
-    padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  font-size: 0.45rem;
+  background-color: #262626;
+  border-radius: 1rem;
+  margin-top: 0.5rem;
+  padding: 1rem;
 }
 
 .schedule-header {
-    font-size: .6rem;
+  font-size: 0.6rem;
 }
 
 .schedule-header,
 .schedule-content {
-    border-bottom: 1px white solid;
+  border-bottom: 1px white solid;
 }
