--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #21dde2;
+    background-image: linear-gradient(#21dde2, lightblue);
     font-family: "Roboto", sans-serif;
     color: white;
   }
